# depth-uncertainty-slam

./: .gitignore  README.md  pyproject.toml
notebooks/: analyze_floaters.ipynb  depth-uncertainty-modeling.ipynb  gtsam_sfm.ipynb  scene_generator.py  tartanair_sweep_v1_analysis.ipynb
notebooks/.ipynb_checkpoints/: depth-uncertainty-modeling-checkpoint.ipynb  tartanair_sweep_v1_analysis-checkpoint.ipynb
notes/: 2026-04.md  2026-05.md  research_plan.md
results/: tartanair_sweep_v1.parquet
src/: run_experiment.py
src/colmap/: custom_bundle_adjustment.py  custom_incremental_pipeline.py  example.py
src/data/: common.py  loader.py  replica.py
src/evaluation/: metrics.py  viz.py
src/initialization/: init.py
src/observations/: builder.py  depth_hypotheses.py
src/optimization/: ba.py
