[project]
name = "depth-uncertainty-slam"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "enlighten>=1.14.1",
    "gtsam>=4.3a0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "pycolmap>=4.0.4",
    "rtree>=1.4.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "trimesh>=4.12.2",
]


[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
]
